--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "midterm-lab-exam-b",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Problem A: Create a node.s application that utilizes a file as data input. Your app should generate and process from data input. Modify your package.json.",
+  "main": "exam.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node exam"
